feat: DP base case